Fix: detail is not showing fully in small screen

--- a/src/Styles/EventPage.module.css
+++ b/src/Styles/EventPage.module.css
@@ -309,6 +309,8 @@
   }
   .right {
     padding: 0;
+    width: 100%;
+    min-width: 100%;
   }
 }
 @media only screen and (max-width: 768px) {
